1/assets/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: httpd
  name: httpd
  namespace: demo-acm
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: httpd
    weight: 100
  wildcardPolicy: None
